improve existing pagination & calculate only relevant index set stats